# itxc

./: .gitignore  README.md  plan.md  probe_results.json  probe_training_output.txt  pyproject.toml
temporal_xc/: check_dataset.py  clarify_metrics.py  config.yaml  config_local.yaml  config_test.yaml  create_and_evaluate_k6.py  create_extended_comparison.py  create_final_comparison_k1246.py  create_final_plots.py  create_final_results.py  create_final_summary.py  create_k10_dataset.py  create_local_subset.py  evaluate_k10_simple.py  evaluate_k6_actual.py  evaluate_recovery.py  evaluate_recovery_actual.py  evaluate_recovery_simple.py  evaluate_token_recovery.py  fast_sae_comparison.py  first_try.py  harvest_and_create_k10.py  log.py  proper_dataset_comparison.py  proper_sae_comparison.py  quick_proper_comparison.py  run_final_evaluation.py  run_sae_comparison.py  sae_latent_temporal_probe.py  sae_quick_test.py  sae_temporal_probe.py  sae_top_features_comparison.py  test_compile.py  test_dataset_direct.py  test_recovery.py  test_training_dataset.py  train_probe.py  utils.py
temporal_xc/make_dataset/: __init__.py  create_training_dataset.py  harvest_activations.py  harvest_activations_tl.py  model_utils.py
temporal_xc/mock_data/problem_0/: chunks_labeled.json  problem.json
temporal_xc/mock_data/problem_1/: chunks_labeled.json  problem.json
temporal_xc/mock_data/problem_2/: chunks_labeled.json  problem.json
temporal_xc/mock_data/problem_3/: chunks_labeled.json  problem.json
temporal_xc/mock_data/problem_4/: chunks_labeled.json  problem.json
temporal_xc/viz/: README.md  mock_problem.html  problem_0_20250913_165120.html  problem_1_20250913_165120.html  real_problem.html  visualize_problem.py
