# Build system configuration
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

# Project metadata
[project]
name = "itxc"
version = "0.0.1"
description = "Sample repository using Apollo best engineering practices"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fire",
    "ipykernel",
    "pydantic",
    "torch",
    "torchvision",
    "tqdm",
    "wandb",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pyright",
    "pytest",
    "ruff",
]

# Tool configurations
[tool.setuptools]
packages = ["temporal_xc"]

[tool.ruff]
line-length = 100
fix = true

[tool.ruff.lint]
select = [
    "E",    # pycodestyle
    "F",    # Pyflakes
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",    # isort
]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.isort]
known-third-party = ["wandb"]

[tool.pyright]
include = ["temporal_xc", "tests"]
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
reportFunctionMemberAccess = true
reportUnknownParameterType = true
reportIncompatibleMethodOverride = true
reportIncompatibleVariableOverride = true
reportInconsistentConstructorType = true
reportOverlappingOverload = true
reportConstantRedefinition = true
reportImportCycles = true
reportPropertyTypeMismatch = true
reportMissingTypeArgument = true
reportUnnecessaryCast = true
reportUnnecessaryComparison = true
reportUnnecessaryContains = true
reportUnusedExpression = true
reportMatchNotExhaustive = true
reportShadowedImports = true
reportPrivateImportUsage = false
